# laba6

./: CMakeLists.txt  README.md  main.cpp
classes/: controler.cpp  controler.h  doc.cpp  doc.h  object.cpp  object.h  square.cpp  square.h
